--- a/src/index.module.css
+++ b/src/index.module.css
@@ -3,12 +3,17 @@
   top: 0;
   right: 0;
   z-index: 9999;
+  font-family: Consolas,monaco,monospace; 
   /* background-color: rgba(244,244,244,.6); */
-  background-color: rgba(11,11,11,.8);
+  /* background-color: rgba(11,11,11,.8); */
   /* color: #111;
   fill: #111; */
-  color: #f1f1f1;
-  fill: #f1f1f1;
+  background: linear-gradient(135deg, rgba(36,36,36, .95), rgba(28,28,28, .9));
+  color: #fff;
+  border-bottom-left-radius: 18px;
+  /* color: #f1f1f1;
+  fill: #f1f1f1; */
+  
   pointer-events: none;
   margin: 0;
   padding: 4px;
@@ -17,24 +22,40 @@
   user-select: none;
 }
 .perf i {
-  display: flex;
+  display: inline-block;
   font-style: normal;
-  padding: 6px;
+  padding: 9px 0px 6px 17px;
   line-height: 13px;
   font-size: 14px;
-  margin-bottom: 3px;
-  width: 120px;
+  margin-bottom: 6px;
+  width: 68px;
   position: relative;
+  font-weight: 700;
+  letter-spacing: 1px;
+  text-shadow: 3px 3px 3px rgb(252 225 225 / 20%);
+  text-align: center;
 }
 .perf svg {
+  left: 0;
   padding: 0;
-  margin-right: 44px;
+  color: rgba(102,217,238, .15);
+  font-size: 32px;
+  position: absolute;
+  top: -6px;
+  text-shadow: none;
 }
 .perf i b {
-  font-size: 9px;
   vertical-align: bottom;
   position: absolute;
   bottom: -4px;
+  color: rgba(102,217,238, 1);
+  text-align: revert;
+  right: 0;
+  text-shadow: none;
+  letter-spacing: 0;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-size: 8px;
 }
 .perf i small {
   font-size: 9px;
@@ -45,15 +66,31 @@
 .toggle {
   pointer-events: auto;
   justify-content: center;
-  display: flex;
+  display: block;
   cursor: pointer;
   font-size: 12px;
   font-weight: 900;
-  background: #fff;
+  background-color: rgb(59 74 76);
   color: #111;
   margin-top: 6px;
+  border-radius: 12px;
+  width: auto;
+  margin: 0 auto;
+  color: #fff;
+  text-align: center;
+  position: absolute;
+  right: 1px;
+  bottom: -17px;
+  padding: 4px 11px;
 }
 .toggle svg {
   margin: 0;
-  font-size: 15px;
+  font-size: 16px;
+  position: relative;
+  color: #fff;
+  vertical-align: middle;
+  padding: 0;
+  top: -1px;
+  margin-right: -6px;
+  margin-left: 0;
 }
