--- a/src/index.module.css
+++ b/src/index.module.css
@@ -3,63 +3,68 @@
   top: 0;
   right: 0;
   z-index: 9999;
-  font-family: Consolas,monaco,monospace; 
   /* background-color: rgba(244,244,244,.6); */
   /* background-color: rgba(11,11,11,.8); */
   /* color: #111;
   fill: #111; */
-  background: linear-gradient(135deg, rgba(36,36,36, .95), rgba(28,28,28, .9));
+  background-color: rgba(36,36,36,1);
   color: #fff;
-  border-bottom-left-radius: 18px;
   /* color: #f1f1f1;
   fill: #f1f1f1; */
   
   pointer-events: none;
   margin: 0;
-  padding: 4px;
+  padding: 4px 6px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   user-select: none;
 }
 .perf i {
-  display: inline-block;
+  display: inline-flex;
   font-style: normal;
-  padding: 9px 0px 6px 17px;
+  padding: 0;
   line-height: 13px;
   font-size: 14px;
-  margin-bottom: 6px;
-  width: 68px;
+  width: 62px;
   position: relative;
-  font-weight: 700;
-  letter-spacing: 1px;
-  text-shadow: 3px 3px 3px rgb(252 225 225 / 20%);
-  text-align: center;
+  font-weight: 500;
+  letter-spacing: 0px;
+  text-align: left;
+  height: 29px;
+  white-space: nowrap;
+  justify-content: space-evenly;
+  font-variant-numeric: tabular-nums;
 }
 .perf svg {
   left: 0;
   padding: 0;
-  color: rgba(102,217,238, .15);
-  font-size: 32px;
+  color: rgba(145,145,145,.12);
+  font-size: 22px;
   position: absolute;
-  top: -6px;
-  text-shadow: none;
+  z-index: -1;
+  max-height: 21px;
+  left: 50%;
+  margin-left: -27px;
+  top: 4px;
 }
+
 .perf i b {
   vertical-align: bottom;
   position: absolute;
-  bottom: -4px;
-  color: rgba(102,217,238, 1);
+  bottom: 5px;
+  color: rgba(101,197,188, 1);
   text-align: revert;
   right: 0;
-  text-shadow: none;
   letter-spacing: 0;
-  text-transform: uppercase;
   letter-spacing: 1px;
   font-size: 8px;
+  font-weight: 500;
+  right: 0;
 }
 .perf i small {
   font-size: 9px;
-  margin-top: 1px;
+  margin-top: 2px;
+  margin-left: -6px;
   display: inline-block;
 }
 
@@ -69,28 +74,35 @@
   display: block;
   cursor: pointer;
   font-size: 12px;
-  font-weight: 900;
-  background-color: rgb(59 74 76);
-  color: #111;
+  background-color: rgb(41, 43, 45);
   margin-top: 6px;
-  border-radius: 12px;
   width: auto;
   margin: 0 auto;
-  color: #fff;
+  color: rgba(145,145,145,1);
+
   text-align: center;
   position: absolute;
-  right: 1px;
+  right: 0;
   bottom: -17px;
   padding: 4px 11px;
 }
 .toggle svg {
-  margin: 0;
-  font-size: 16px;
+  font-size: 19px;
   position: relative;
-  color: #fff;
+  z-index: 0;
   vertical-align: middle;
   padding: 0;
-  top: -1px;
-  margin-right: -6px;
-  margin-left: 0;
+  left: initial;
+  top: initial;
+  color: rgba(145,145,145,1);
+  margin: -6px -6px -6px -6px;
+  display: inline-block;
+  margin-top: -7px;
+}
+.toggle:hover {
+  background-color: rgb(32,32,32);
+  color: rgb(203,203,203);
+}
+.toggle:hover svg {
+  color: rgb(203,203,203);
 }
