--- a/src/index.module.css
+++ b/src/index.module.css
@@ -3,15 +3,12 @@
   top: 0;
   right: 0;
   z-index: 9999;
-  /* background-color: rgba(244,244,244,.6); */
-  /* background-color: rgba(11,11,11,.8); */
-  /* color: #111;
-  fill: #111; */
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
   background-color: rgba(36,36,36,1);
   color: #fff;
-  /* color: #f1f1f1;
-  fill: #f1f1f1; */
-  
+
   pointer-events: none;
   margin: 0;
   padding: 4px 6px;
