fixed design with styled

--- a/demo/src/index.css
+++ b/demo/src/index.css
@@ -17,3 +17,11 @@ pre {
   padding: 20px;
   border: 10px solid black;
 }
+
+#root, canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
